[tool.poetry]
name = "scheduler-sibsiu"
version = "0.1.0"
description = ""
authors = ["mariama4 <mariama4@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
apscheduler = "^3.10.4"
pdf2image = "^1.17.0"
requests = "^2.31.0"
aiohttp = "^3.9.3"
pytz = "^2024.1"
aiogram = "^3.4.1"
beautifulsoup4 = "^4.12.3"
pymongo = "^4.6.2"
motor = "^3.3.2"
cachetools = "^5.3.3"
python-dotenv = "^1.0.1"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
